# xclient

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  agent.md  pyproject.toml
.cursor/build-image/: SKILL.md
.cursor/rules/: read-agent-entry.mdc
docs/development/: architecture-spec.md  coding-style.md
skills/: README.md
skills/build-image/: SKILL.md
skills/build-image/scripts/: build-image.sh
src/xclient/: __init__.py  __main__.py  cli.py  openai_client.py
src/xclient/observability/: __init__.py  config.py  logging.py  tracing.py
tests/: test_cli.py  test_observability_config.py  test_observability_logging.py  test_observability_tracing.py  test_openai_client.py
