[project]
name = "xclient"
version = "0.1.0"
description = "Thin OpenAI-compatible CLI client for x-farmer API Gateway testing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
xclient = "xclient.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
